Fix line break in side bar

--- a/src/jsMain/resources/public/stylesheets/components/_main-canvas.scss
+++ b/src/jsMain/resources/public/stylesheets/components/_main-canvas.scss
@@ -22,27 +22,15 @@
         top: 0;
         cursor: col-resize;
         opacity: 0.5;
-
-        &:hover {
-            background-color: var(--primary-hover-background);
-        }
     }
 }
 
 .side-bar-resize {
     left: 0;
-
-    &:hover {
-        border-left: solid 1px var(--theme-color);
-    }
 }
 
 .info-bar-resize {
     right: 0;
-
-    &:hover {
-        border-right: solid 1px var(--theme-color);
-    }
 }
 
 @include utils.desktop {
